# EncryptedIO

./: .gitignore  README.md
app/: .gitignore  CMakeCache.txt  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/singuloid/encrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cache.cpp  encrypt_data.cpp  encrypt_file.cpp  encrypt_head.cpp  encrypt_posix.cpp  encrypt_utils.cpp  native-lib.cpp  posix.cpp
app/src/main/cpp/crypto/: aes_api.cpp  crypto.cpp
app/src/main/cpp/crypto/include/: aes_api.h  crypto.h
app/src/main/cpp/include/: block-inl.h  block.h  cache-inl.h  encrypt_data-inl.h  encrypt_data.h  encrypt_file-inl.h  encrypt_file.h  encrypt_head-inl.h  encrypt_head.h  encrypt_posix.h  encrypt_utils.h  file_utils-inl.h  file_utils.h  posix.h
app/src/main/cpp/io/: cache.cpp  crypto_helper.cpp  encrypt_data.cpp  encrypt_file.cpp  encrypt_head.cpp  encrypt_posix.cpp  encrypt_utils.cpp  io.cpp  io_application.cpp  jni_native.cpp  posix.cpp
app/src/main/cpp/io/include/: block-inl.h  block.h  cache-inl.h  cache.h  crypto_helper.h  encrypt_data-inl.h  encrypt_data.h  encrypt_file-inl.h  encrypt_file.h  encrypt_head-inl.h  encrypt_head.h  encrypt_posix.h  encrypt_utils.h  file_utils-inl.h  file_utils.h  io.h  io_application.h  log.h  macros.h  posix.h
app/src/main/cpp/io/include/jni/: jni_constants.h  scoped_bytes.h  scoped_local_ref.h  scoped_utf_chars.h
app/src/main/cpp/jniutils/: jni_native.cpp  jni_native.h  scoped_bytes.h  scoped_utf_chars.h
app/src/main/java/com/singuloid/encrypt/: CryptoHelper.java  IOApplication.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
(+1 files in other folders)
